<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_menu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="219dp">

        <ImageButton
            android:id="@+id/leftArrow"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/btnchange"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="200dp"
            android:text="@string/Confirm"
            app:cornerRadius="20dp"
            app:backgroundTint="#E10C0C"

            />

        <EditText
            android:id="@+id/OldPassword"
            android:layout_width="291dp"
            android:layout_height="39dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="-250dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/insert_old_password"
            android:fontFamily="@font/candy_beans"
            android:padding="6dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/NewPassword"
            android:layout_width="291dp"
            android:layout_height="39dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/insert_new_password"
            android:padding="6dp"
            android:fontFamily="@font/candy_beans"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ConfirmNewPassword"
            android:layout_width="291dp"
            android:layout_height="39dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:fontFamily="@font/candy_beans"
            android:padding="6dp"
            android:inputType="textPassword" />


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>