<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="200dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/candy_beans"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/candy_beans"
            android:padding="10dp"
            android:shadowColor="@color/black"
            android:shadowRadius="2"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="28sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="12dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/candy_beans"
            android:padding="10dp"
            android:shadowColor="@color/black"
            android:shadowRadius="2"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="28sp"
            app:backgroundTint="#FFFFFF"
            app:cornerRadius="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>