<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_menu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="13">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="140">
            <ImageButton
                android:id="@+id/settingsChangePasswordBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY" />
                </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="23">

            </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="27">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="20">

                    <EditText
                        android:id="@+id/OldPassword"
                        android:layout_width="320dp"
                        android:layout_height="50dp"

                        android:background="@drawable/text_box"
                        android:ems="10"

                        android:hint="@string/insert_old_password"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        app:cornerRadius="2dp" />

                    <EditText
                        android:id="@+id/NewPassword"
                        android:layout_width="320dp"
                        android:layout_height="50dp"

                        android:layout_marginTop="55dp"
                        android:background="@drawable/text_box"
                        android:ems="10"
                        android:hint="@string/insert_new_password"
                        android:inputType="textPassword"
                        android:padding="16dp" />

                    <EditText
                        android:id="@+id/ConfirmNewPassword"
                        android:layout_width="320dp"
                        android:layout_height="50dp"

                        android:layout_marginTop="110dp"
                        android:background="@drawable/text_box"
                        android:ems="10"
                        android:hint="@string/confirm_new_password"
                        android:inputType="textPassword"
                        android:padding="16dp" />



                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="21">

                </RelativeLayout>




            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="13">



                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="14">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="190dp"
                        android:layout_height="60dp"
                        android:text="@string/Confirm"
                        app:backgroundTint="#FF0000"
                        app:cornerRadius="20dp"

                        android:layout_marginTop="40dp"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10">


                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>