<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="13">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="15">

                    <TextView
                        android:id="@+id/questionSubmited"
                        android:layout_width="360dp"
                        android:layout_height="50dp"
                        android:fontFamily="@font/candy_beans"
                        android:text="@string/questionSubmited"
                        android:textColor="@color/white"
                        android:textSize="27sp"
                        android:typeface="serif"

                        />
                    <TextView
                        android:id="@+id/questionSubmitedText"
                        android:layout_width="410dp"
                        android:layout_height="150dp"
                        android:fontFamily="@font/candy_beans"
                        android:text="@string/questionTextInfo"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:typeface="serif"

                        android:layout_marginTop="35dp"
                        />




                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="21">

                </RelativeLayout>




            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10">
                    <Button
                        android:id="@+id/submitQuestionConfirmedMainMenu"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:text="@string/title_activity_main_menu"
                        app:backgroundTint="#E10C0C"
                        app:cornerRadius="20dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="65dp"
                        />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6">

                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>