<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_auth"
    tools:context=".RegisterConfirmCode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8">


            <ImageButton
                android:id="@+id/button3"
                android:layout_width="67dp"
                android:layout_height="94dp"
                android:background="@drawable/back"
                android:onClick="backToForm"
                android:scaleType="fitXY" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="284dp"
                        android:layout_height="66dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/candy_beans"
                        android:shadowColor="@color/black"
                        android:shadowRadius="4"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="27sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <EditText
                        android:id="@+id/text_code"
                        android:layout_width="311dp"
                        android:layout_height="76dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/text_box"
                        android:ems="10"
                        android:fontFamily="@font/candy_beans"
                        android:hint="@string/code"
                        android:inputType="number"
                        android:maxLength="5"
                        android:padding="16dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="304dp"
                        android:layout_height="83dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/candy_beans"
                        android:onClick="confirmCode"
                        android:padding="10dp"
                        android:shadowColor="@color/black"
                        android:shadowRadius="2"
                        android:text="@string/confirm"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:backgroundTint="#DD2828"
                        app:cornerRadius="12dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6">

                    <TextView
                        android:id="@+id/text_fail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_fail"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/candy_beans"
                        android:textColor="@color/red_incorrect"
                        android:visibility="invisible"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6"></RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">


        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>